--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,18 @@
-# Numerous always-ignore extensions
-*.diff
-*.err
-*.orig
-*.log
-*.rej
-*.swo
-*.swp
-*.vi
-*~
-*.sass-cache
-
-# OS or Editor folders
+/.idea
+/node_modules
+/public/build
+/public_html/ajax/html
+/public_html/cache
+/public_html/images
+/public_html/log
+/resources/assets/bower
+/vendor
+/_ide_helper.php
+/.phpstorm.meta.php
+/config.php
+/config_tracker.php
 .DS_Store
-._*
-Thumbs.db
-.cache
-.project
-.settings
-.tmproj
-*.esproj
-nbproject
-*.sublime-project
-*.sublime-workspace
-cache.properties
+.env
 .tm_properties
-
-# Komodo
-*.komodoproject
-.komodotools
-
-# Folders to ignore
-.hg
-.svn
-.CVS
-.idea
+Thumbs.db
+composer.phar
